k8s/infrastructure/configs/minio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2025-04-08T15-41-24Z
          args:
            - server
            - "--console-address"
            - ":9001"
            - /storage
          ports:
            - containerPort: 9000
              hostPort: 9000
            - containerPort: 9001
              hostPort: 9001
          volumeMounts:
            - name: minio-storage # must match the volume name
              mountPath: "/storage"
          readinessProbe:
            exec:
              command:
                - mc
                - ready
                - local
            initialDelaySeconds: 5
            timeoutSeconds: 5
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - name: backend
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: frontend
      port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ui
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.halvorteigen.no
      secretName: minio-halvorteigen-tls
  rules:
    - host: minio.halvorteigen.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
